--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -144,3 +144,10 @@ html {
   display: flex;
   justify-content: space-evenly;
 }
+
+.welcome {
+  color: white;
+  padding: 10px;
+  text-align: center;
+  margin-top: 5px;
+}
